# GitComet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/gitcomet-core/: Cargo.toml
crates/gitcomet-core/src/: auth.rs  conflict_session.rs  diff.rs  domain.rs  file_diff.rs  git_ops_trace.rs  lib.rs  merge.rs  merge_extraction.rs  mergetool_trace.rs  path_utils.rs  process.rs  services.rs  text_utils.rs
crates/gitcomet-core/src/conflict_session/: marker_parse.rs  tests.rs
crates/gitcomet-core/tests/: meld_algorithm_tests.rs  merge_fixture_harness.rs
crates/gitcomet-git-gix/: Cargo.toml
crates/gitcomet-git-gix/src/: backend.rs  util.rs
crates/gitcomet-git-gix/src/repo/: blame.rs  conflict_stages.rs  diff.rs  git_ops.rs  history.rs  mergetool.rs  mod.rs  porcelain.rs  refs.rs  remotes.rs  status.rs  submodules.rs  worktrees.rs
crates/gitcomet-git-gix/tests/: backend_integration.rs  blame_integration.rs  git_cli_scoreboard.rs  git_ops_trace_integration.rs  log_integration.rs  patch_integration.rs  refs_integration.rs  remote_management_integration.rs  status_integration.rs  submodules_integration.rs  test_git_env.rs  upstream_divergence_integration.rs  worktrees_integration.rs
crates/gitcomet-git-gix/tests/support/: test_git_env.rs
crates/gitcomet-state/: Cargo.toml
crates/gitcomet-state/src/: benchmarks.rs  lib.rs  model.rs  msg.rs  session.rs
crates/gitcomet-state/src/msg/: effect.rs  message.rs  message_debug.rs  repo_command_kind.rs  repo_path.rs  repo_path_list.rs
crates/gitcomet-state/src/store/: effects.rs  executor.rs  mod.rs  reducer.rs  repo_monitor.rs  tests.rs
crates/gitcomet-state/src/store/effects/: clone.rs  repo_actions.rs  repo_commands.rs  repo_load.rs
crates/gitcomet-state/src/store/reducer/: actions_emit_effects.rs  conflict_interactions.rs  diff_selection.rs  effects.rs  external_and_history.rs  repo_management.rs  util.rs
crates/gitcomet-state/src/store/tests/: actions_emit_effects.rs  auth_prompt.rs  conflict_session.rs  diff_selection.rs  effects.rs  repo_management.rs  repo_monitor.rs  send_failures.rs
crates/gitcomet-state/tests/: session_integration.rs
crates/gitcomet-ui-gpui/: Cargo.toml  build.rs  build_themes.rs
crates/gitcomet-ui-gpui/assets/: open_source_licenses.tsv
crates/gitcomet-ui-gpui/assets/fonts/lilex/: LICENSE-OFL.txt
crates/gitcomet-ui-gpui/assets/themes/: gitcomet.json  tokyo_night.json
crates/gitcomet-ui-gpui/benches/: performance.rs
crates/gitcomet-ui-gpui/benches/performance/: branch_sidebar.rs  branch_sidebar_cache.rs  branch_sidebar_extreme_scale.rs  clipboard.rs  commit_details.rs  common.rs  conflict_load_duplication.rs  conflict_resolved_output_gutter_scroll.rs  conflict_search_query_update.rs  conflict_split_resize_step.rs  conflict_streamed_provider.rs  conflict_streamed_resolved_output.rs  conflict_three_way_prepared_syntax_scroll.rs  conflict_three_way_scroll.rs  conflict_three_way_visible_map_build.rs  conflict_two_way_diff_build.rs  conflict_two_way_split_scroll.rs  conflict_two_way_word_highlights.rs  diff_open_conflict_compare_first_window.rs  diff_open_file_inline_first_window.rs  diff_open_file_split_first_window.rs  diff_open_image_preview_first_paint.rs  diff_open_markdown_preview_first_window.rs  diff_open_patch_100k_lines_first_window.rs  diff_open_patch_deep_window.rs  diff_open_patch_first_window.rs  diff_open_svg_dual_path_first_window.rs  diff_refresh_rev_only_same_content.rs  diff_split_resize_drag_step.rs  display.rs  file_diff_inline_syntax_projection.rs  file_diff_replacement_alignment.rs  file_diff_syntax_cache_drop.rs  file_diff_syntax_prepare.rs  file_diff_syntax_query_stress.rs  file_diff_syntax_reparse.rs  frame_timing.rs  fs_event.rs  git_ops.rs  history_cache_build.rs  (+42 more)
crates/gitcomet-ui-gpui/src/: app.rs  assets.rs  bundled_fonts.rs  focused_diff.rs  font_preferences.rs  lib.rs  perf_alloc.rs  perf_ram_guard.rs  perf_sidecar.rs  smoke_tests.rs  startup_probe.rs  test_support.rs  text_selection.rs  theme.rs  ui_runtime.rs  ui_scale.rs
crates/gitcomet-ui-gpui/src/kit/: mod.rs  scrollbar.rs  text_input.rs  text_model.rs
crates/gitcomet-ui-gpui/src/view/: branch_sidebar.rs  chrome.rs  clone_progress.rs  conflict_resolver.rs  date_time.rs  diff_preview.rs  diff_text_selection.rs  diff_utils.rs  fingerprint.rs  history_graph.rs  markdown_preview.rs  mod.rs  mod_helpers.rs  open_source_licenses_data.rs  patch_split.rs  path_display.rs  perf.rs  platform_open.rs  poller.rs  settings_window.rs  sidebar_presentation.rs  splash.rs  state_apply.rs  test_support.rs  tests.rs  toast_host.rs  tooltip.rs  tooltip_host.rs  word_diff.rs
crates/gitcomet-ui-gpui/src/view/components/: button.rs  containers.rs  context_menu.rs  diff_stat.rs  picker_prompt.rs  split_button.rs  tab.rs  tab_bar.rs  tokens.rs
crates/gitcomet-ui-gpui/src/view/conflict_resolver/: split_row_index.rs  tests.rs  word_highlight.rs
crates/gitcomet-ui-gpui/src/view/conflict_resolver/tests/: block_diff.rs  parsing.rs  resolution.rs  split_row_index.rs
crates/gitcomet-ui-gpui/src/view/panels/: action_bar.rs  bottom_status_bar.rs  layout.rs  mod.rs  popover.rs  repo_tabs_bar.rs  tests.rs
crates/gitcomet-ui-gpui/src/view/panels/main/: binary_conflict.rs  decision_conflict.rs  diff.rs  diff_view.rs  diff_view_helpers.rs  keep_delete_conflict.rs  status_nav.rs
crates/gitcomet-ui-gpui/src/view/panels/popover/: app_menu.rs  blame.rs  branch_picker.rs  checkout_remote_branch_prompt.rs  clone_repo.rs  conflict_save_stage_confirm.rs  context_menu.rs  create_branch.rs  create_branch_from_ref_prompt.rs  create_tag_prompt.rs  delete_remote_branch_confirm.rs  diff_hunks.rs  discard_changes_confirm.rs  file_history.rs  fingerprint.rs  force_delete_branch_confirm.rs  force_push_confirm.rs  force_remove_worktree_confirm.rs  settings.rs  (+23 more)
crates/gitcomet-ui-gpui/src/view/panes/: details.rs  history.rs  main.rs  mod.rs  sidebar.rs
crates/gitcomet-ui-gpui/src/view/rows/: benchmarks.rs  conflict_resolver.rs  diff.rs  diff_canvas.rs  diff_text.rs  history.rs  history_graph_paint.rs  mod.rs  sidebar.rs  status.rs
(+165 files in other folders)
