[package]
name = "gitcomet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-support = []
benchmarks = []

[dependencies]
memchr = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
