[package]
name = "gitcomet-git-gix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
benchmarks = ["gitcomet-core/benchmarks"]

[dependencies]
gitcomet-core = { workspace = true }
gix = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
gitcomet-core = { workspace = true, features = ["test-support", "benchmarks"] }
syn = { version = "2", features = ["full", "visit"] }
