[package]
name = "gitcomet-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
benchmarks = []
test-support = []

[dependencies]
gitcomet-core = { workspace = true }
gix = { workspace = true }
notify = { workspace = true }
smol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
gitcomet-core = { workspace = true, features = ["test-support"] }
